--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <a class="nav-link" href="shop.html">Shop</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">About</a>
+                        <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="">Contact</a>
@@ -49,7 +49,7 @@
                 excepturi cumque ipsa cupiditate voluptatibus corrupti eum quibusdam dolore?
             </p>
 
-            <a class="cta" href="#">Shop Now</a>
+            <a class="cta" href="shop.html">Shop Now</a>
         </div>
     </header>
 
@@ -74,26 +74,8 @@
                     Sint, rem nulla reiciendis veniam ullam, laborum dolorem asperiores voluptate corporis eveniet dicta non a illum libero minima aspernatur, doloribus deleniti exercitationem.
                 </p>
 
-                <a class="cta" id="open">Learn More</a>
+                <button class="cta" id="open"  data-toggle="modal" data-target="#modal">Learn More</button>
             </div>
-
-            <!-- start of  modal -->
-            <div class="modal-container" id="modal_container">
-                <div class="adopt-modal">
-                    <h2>Adopt Alan Today!</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas deleniti, porro alias nostrum, dignissimos distinctio suscipit libero nemo architecto quisquam, id nesciunt. Esse, accusantium unde. Tempore ratione dicta dolor quasi?
-                    </p>
-
-                    <form action="#">
-                        <input type="text" placeholder="First Name" required>
-                        <input type="email" placeholder="Your Email Address" required> 
-                        <textarea name="" id="" cols="30" rows="10"></textarea>
-                        <button id="close" type="submit">Submit</button>
-                 </form>
-             </div>
-            </div>
-        <!-- end of  modal -->
         </section>
 
         <!-- start of paw print-->
@@ -107,7 +89,7 @@
 
            <div class="container text-center">
                 <div class="row d-flex justify-content-center">
-                    <div class=" col-lg-4 best-text-section">
+                    <div class="col-md-6 col-lg-4 best-text-section">
                         <div class="icon">
                             <i class="fas fa-concierge-bell"></i>
                         </div>
@@ -115,7 +97,7 @@
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, ut saepe dolorem debitis esse voluptatum repellat vel nihil dolor nisi eius ab.
                         </p>
                     </div>
-                    <div class="col-lg-4 best-text-section">
+                    <div class="col-md-6 col-lg-4 best-text-section">
                         <div class="icon">
                             <i class="fas fa-dollar-sign"></i>
                         </div>
@@ -123,7 +105,7 @@
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, ut saepe dolorem debitis esse voluptatum repellat vel nihil dolor nisi eius ab.
                         </p>
                     </div>
-                    <div class="col-lg-4 best-text-section">
+                    <div class="col-md-6 col-lg-4 best-text-section">
                         <div class="icon">
                             <i class="far fa-calendar-alt"></i>
                         </div>
@@ -132,7 +114,7 @@
                         </p>
                     </div>
 
-                    <div class=" col-lg-4 best-text-section">
+                    <div class=" col-md-6 col-lg-4 best-text-section">
                         <div class="icon">
                             <i class="fas fa-shipping-fast"></i>
                         </div>
@@ -140,7 +122,7 @@
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, ut saepe dolorem debitis esse voluptatum repellat vel nihil dolor nisi eius ab.
                         </p>
                     </div>
-                    <div class="col-lg-4 best-text-section">
+                    <div class="col-md-6 col-lg-4 best-text-section">
                         <div class="icon">
                             <i class="fas fa-briefcase-medical"></i>
                         </div>
@@ -148,7 +130,7 @@
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, ut saepe dolorem debitis esse voluptatum repellat vel nihil dolor nisi eius ab.
                         </p>
                     </div>
-                    <div class="col-lg-4 best-text-section">
+                    <div class="col-md-6 col-lg-4 best-text-section">
                         <div class="icon">
                             <i class="fas fa-bone"></i>
                         </div>
@@ -186,7 +168,7 @@
             <h2>Location</h2>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-4 d-flex justify-content-center">
+                    <div class="col-md-4 d-flex justify-content-center">
                         <p>
                             <i class="fas fa-map-marker-alt"></i>
                             <strong>555 Bruce way</strong><br>
@@ -199,7 +181,7 @@
                         </p>
                     </div>
 
-                    <div class="col-lg-4 d-flex justify-content-center">
+                    <div class="col-md-4 d-flex justify-content-center">
                         <p>
                             <i class="fas fa-map-marker-alt"></i>
                             <strong>555 Bruce way</strong><br>
@@ -211,7 +193,7 @@
                             Sunday: Closed
                         </p>
                     </div>
-                    <div class="col-lg-4 d-flex justify-content-center">
+                    <div class="col-md-4 d-flex justify-content-center">
                         <p>
                             <i class="fas fa-map-marker-alt"></i>
                             <strong>555 Bruce way</strong><br>
@@ -231,18 +213,18 @@
     <footer>
         <div class="container">
             <div class="row">
-               <div class="col-lg-3">
+               <div class="col-md-12 col-lg-3">
                 <a class="navbar-brand" href="#">The Pet Sh<span><i class="fas fa-paw"></i></span>p</a>
                </div>
 
-                <div class="col-lg-6 d-flex justify-content-center">
+                <div class="col-md-12 col-lg-6 d-flex justify-content-center">
                 <form action="">
                     <input type="email" placeholder="Stay Connected!">
                     <a href="#" class="cta">Submit</a>
                 </form>
                 </div>
 
-                <div class="col-lg-3 d-flex justify-content-center">
+                <div class="col-md-12 col-lg-3 d-flex justify-content-center">
                 <div class="social-icons">
                     <i class="fab fa-instagram"></i>
                 </div>
