--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="">Contact</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link phone-number" href=""><i class="fas fa-phone"></i> (513)555-0650</a>
