--- a/shop.html
+++ b/shop.html
@@ -96,8 +96,12 @@
                     </ul>
                 </div>
 
-                <div class="row">
-                    <div class="product col-sm-6 col-md-4 col-lg-3 ">
+                <!-- <div id="market">
+                
+                </div> -->
+
+                <div id="market" class="row">
+                    <!-- <div class="product col-sm-6 col-md-4 col-lg-3 ">
                         <img src="img/cat-food1.jpeg" alt="" class="img-fluid mb-4">
                         <h3>Purina Friskies Classic Paté Cat Food 5.5oz</h3>
                         <p>
@@ -119,8 +123,8 @@
                         <p>
                             <strong>$13.97</strong> <a href="#" class="ml-4">Add to Cart</a>
                         </p>
-                    </div>
-
+                    </div> -->
+<!-- 
                     <div class="product col-sm-6 col-md-4 col-lg-3 ">
                         <img src="img/dog-food2.jpeg" alt="" class="img-fluid mb-4">
                         <h3>Purina Beggin' Strips Dog Treat - Bacon</h3>
@@ -191,7 +195,7 @@
                         <p>
                             <strong>$33.99</strong> <a href="#" class="ml-4">Add to Cart</a>
                         </p>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
@@ -262,11 +266,10 @@
         </div>
     </footer>
 
-
+    <script src="app.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
 
     <script>
         window.onscroll = function() {scrollFunction()};
