--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <!-- navigation bar -->
     <nav id="nav-bar" class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#">The Pet Sh<span><i class="fas fa-paw"></i></span>p</a>
+        <a class="navbar-brand" href="#">The Pet Sh<span id="pawLogo"><i class="fas fa-paw"></i></span>p</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"   aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,19 +22,19 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a id="links" class="nav-link" href="">Home<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a id="links" class="nav-link" href="shop.html">Shop</a>
+                    <a class="nav-link" href="shop.html">Shop</a>
                 </li>
                 <li class="nav-item">
-                    <a id="links" class="nav-link" href="about.html">About</a>
+                    <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a id="links" class="nav-link" href="contact.html">Contact</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a id="links" class="nav-link phone-number" href=""><i class="fas fa-phone"></i> (513)555-0650</a>
+                    <a class="nav-link phone-number" href=""><i class="fas fa-phone"></i> (513)555-0650</a>
                 </li>
             </ul>
         </div>
@@ -247,18 +247,25 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    
 
     <script>
         window.onscroll = function() {scrollFunction()};
 
         function scrollFunction() {
-            if (document.body.scrollTop > 40 || document.documentElement.scrollTop > 40) {
-            document.getElementById("nav-bar").classList.add("color");
-            document.getElementById("links").classList.add("link-color");  
-            } else {
-            document.getElementById("nav-bar").style.top = "0px";
-            document.getElementById("nav-bar").classList.remove("color");
+            let links = document.getElementsByClassName("nav-link")
+
+            for (let i = 0; i < links.length; i++) {
+                if (document.body.scrollTop > 40 || document.documentElement.scrollTop > 40) {
+                    document.getElementById("nav-bar").classList.add("color");
+                    document.getElementById("pawLogo").classList.add("link-color");
+                    links[i].classList.add("link-color");
+                    } else {
+                        document.getElementById("nav-bar").style.top = "0px";
+                        document.getElementById("nav-bar").classList.remove("color");
+                        document.getElementById("pawLogo").classList.remove("link-color");
+                        links[i].classList.remove("link-color");
+                }
             }
         }
     </script>
