--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             </ul>
         </div>
     </nav>
+
     <!-- start header section --> 
     <header id="header-section">
         <div class="header-text container">
@@ -54,33 +55,40 @@
 
     <main>
         <section id="feature-section" class="container text-center">
-            <h2>Pet Of The Month</h2>
 
             <!-- start of paw print-->
-            <div class="paw-print">
+            <!-- <div class="paw-print">
                 <i class="fas fa-paw"></i>
-            </div>
+            </div> -->
             <!-- end of paw print-->
 
             <!-- start of featured pet section -->
             <div class="container">
-                <div class="featured-pet-img">
-                    <img src="img/alan.jpg" alt="dog with yellow hat on">
+                <div class="row">
+                    <div class="featured-pet-img col-sm-12 col-lg-4">
+                        <img src="img/alicia.jpg" alt="dog with yellow hat on">
+                    </div>
+                    <div class="featured-pet-img col-sm-12 col-lg-4">
+                        <img src="img/cong.jpg" alt="dog with yellow hat on">
+                    </div>
+                    <div class="featured-pet-img col-sm-12 col-lg-4">
+                        <img src="img/bonnie-kittle.jpg" alt="dog with yellow hat on">
+                    </div>
+    
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, rem nulla reiciendis veniam ullam, laborum dolorem asperiores voluptate corporis eveniet dicta non a illum libero minima aspernatur, doloribus deleniti exercitationem.
+                        Sint, rem nulla reiciendis veniam ullam, laborum dolorem asperiores voluptate corporis eveniet dicta non a illum libero minima aspernatur, doloribus deleniti exercitationem.
+                    </p>
+    
+                    <!-- <button class="cta" id="open"  data-toggle="modal" data-target="#modal">Learn More</button> -->
                 </div>
-
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, rem nulla reiciendis veniam ullam, laborum dolorem asperiores voluptate corporis eveniet dicta non a illum libero minima aspernatur, doloribus deleniti exercitationem.
-                    Sint, rem nulla reiciendis veniam ullam, laborum dolorem asperiores voluptate corporis eveniet dicta non a illum libero minima aspernatur, doloribus deleniti exercitationem.
-                </p>
-
-                <button class="cta" id="open"  data-toggle="modal" data-target="#modal">Learn More</button>
             </div>
         </section>
 
         <!-- start of paw print-->
-        <div class="paw-print2">
+        <!-- <div class="paw-print2">
             <i class="fas fa-paw"></i>
-        </div>
+        </div> -->
         <!-- end of paw print-->
 
         <section id="best-section">
