updated shopping section

--- a/shop.html
+++ b/shop.html
@@ -47,7 +47,7 @@
                 Not a member of The Pet Shop? Sign up today and get 20% off your first order! Sign up <br> to be notified when we have a sale and keep up with what the The Pet Shop is doing!
             </p>
             <input type="email" placeholder="Your Email Address" required>
-            <a type="button" class=" cta" data-toggle="modal" data-target="#exampleModal" href="#">Sign Up</a>
+            <a class="cta" data-toggle="modal" data-target="#exampleModal" href="#">Sign Up</a>
         </div>
     </header>
 
