--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <div class="header-text container">
             <h1>The Pet Shop</h1>
             <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus sunt molestiae  
-                voluptatum odit, incidunt eligendi quidem distinctio in, consectetur enim necessitatibus excepturi cumque ipsa cupiditate voluptatibus corrupti eum quibusdam dolore?
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus sunt molestiae <br> 
+                voluptatum odit, incidunt eligendi quidem distinctio in, consectetur enim necessitatibus <br> excepturi cumque ipsa cupiditate voluptatibus corrupti eum quibusdam dolore?
             </p>
 
             <a class="cta" href="shop.html">Shop Now</a>
@@ -65,13 +65,13 @@
             <!-- start of featured pet section -->
             <div class="container">
                 <div class="row">
-                    <div class="featured-pet-img col-sm-12 col-lg-4">
+                    <div class="featured-pet-img col-sm-12 col-md-12 col-lg-4">
                         <img src="img/alicia.jpg" alt="dog with yellow hat on">
                     </div>
-                    <div class="featured-pet-img col-sm-12 col-lg-4">
+                    <div class="featured-pet-img col-sm-12 col-md-6 col-lg-4">
                         <img src="img/cong.jpg" alt="dog with yellow hat on">
                     </div>
-                    <div class="featured-pet-img col-sm-12 col-lg-4">
+                    <div class="featured-pet-img col-sm-12 col-md-6 col-lg-4">
                         <img src="img/bonnie-kittle.jpg" alt="dog with yellow hat on">
                     </div>
     
