--- a/shop.html
+++ b/shop.html
@@ -46,29 +46,11 @@
             <p>
                 Not a member of The Pet Shop? Sign up today and get 20% off your first order! Sign up <br> to be notified when we have a sale and keep up with what the The Pet Shop is doing!
             </p>
-            <input type="email" placeholder="Your Email Address" required>
-            <a class="cta" data-toggle="modal" data-target="#exampleModal" href="#">Sign Up</a>
+            <input id="userInput" type="email" placeholder="Your Email Address" required>
+            <a class="cta" href="#">Sign Up</a>
+            <p id="error">Please provide a valid email address</p>
         </div>
     </header>
-
-    <!-- Start Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"         aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">The Pet Sh<span><i class="fas fa-paw"></i></span>p</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <h3>Thank you for signing up!</h3>
-                    <p>Please use the code: <strong>FirstOrder</strong> to get your 20% off!</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- End of  modal -->
 
     <main>
         <section class="shopping">
