--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
         
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
@@ -34,7 +34,7 @@
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link phone-number" href=""><i class="fas fa-phone"></i> (513)555-0650</a>
+                    <a id="phone-number" class="nav-link" href=""><i class="fas fa-phone"></i> (513)555-0650</a>
                 </li>
             </ul>
         </div>
@@ -54,22 +54,28 @@
         <section class="about-section text-center">
             <div class="whoWeAre-box container">
                 <div class="row">
+
+                    <div class="col-md-6">
+                        <img src="img/about1.jpg" class="img-fluid" alt="">
+                    </div>
+                    
                     <div class="col-md-6">
                         <h2>Who We Are</h2>
                         <p>
-                            At The Pet Shop, we strive to deliver the best products with the best service – and we want to become even better. Happy customers are always our #1 priority, and our team members are passionate about finding new ways to wow both pet owners and the industry at large.
+                            At The Pet Shop, we strive to deliver the best products with the best service and we want to become even better. Happy customers are always our #1 priority, and our team members are passionate about finding new ways to wow both pet owners and the industry at large.
                         </p>
-                    </div>
-
-                    <div class="col-md-6">
-                        <img src="img/priscilla.jpg" class="img-fluid" alt="">
                     </div>
                 </div>
             </div>
 
             <div class="whyWeDoIt-box container">
                 <div class="row">
-                    <div class="col-md-6 order-2">
+
+                    <div class="col-md-6 order-md-2">
+                        <img src="img/about2.jpg" class="img-fluid" alt="">
+                    </div>
+
+                    <div class="col-md-6 order-md-1">
                         <h2>Why We Do It</h2>
                         <p>
                             Our mission here at The Pet Shop is To be the most trusted and convenient online destination for pet parents (and partners), everywhere. Our experts are here 24/7 to answer questions and help you find the perfect items for your pet. We also have a 100% Unconditional Satisfaction Guaranteed Policy on every order, just in case they’re not crazy about that new food or toy. Shopping for your pet has never been easier.
@@ -80,10 +86,6 @@
                             <li>we donate to the animals care society</li>
                             <li>we love animals</li>
                         </ul>
-                    </div>
-
-                    <div class="col-md-6 order-1">
-                        <img src="img/alan.jpg" class="img-fluid" alt="">
                     </div>
                 </div>
             </div>
@@ -142,11 +144,13 @@
                 if (document.body.scrollTop > 40 || document.documentElement.scrollTop > 40) {
                     document.getElementById("nav-bar").classList.add("color");
                     document.getElementById("pawLogo").classList.add("link-color");
+                    document.getElementById("phone-number").style.border =  "1px solid #21110e";
                     links[i].classList.add("link-color");
                     } else {
                         document.getElementById("nav-bar").style.top = "0px";
                         document.getElementById("nav-bar").classList.remove("color");
                         document.getElementById("pawLogo").classList.remove("link-color");
+                        document.getElementById("phone-number").style.border =  "1px solid #ffd880";
                         links[i].classList.remove("link-color");
                 }
             }
