--- a/contact.html
+++ b/contact.html
@@ -16,14 +16,14 @@
     <header id="header-contact-section">
          <!-- navigation bar -->
     <nav id="nav-bar" class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#">The Pet Sh<span><i class="fas fa-paw"></i></span>p</a>
+        <a class="navbar-brand" href="#">The Pet Sh<span id="pawLogo"><i class="fas fa-paw"></i></span>p</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"   aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a id="links" class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
@@ -50,12 +50,12 @@
                 <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit.    Exercitationem, at consequuntur! Aut, dolor obcaecati. Quo ullam eveniet numquam nobis  veniam aut illo deleniti itaque consequuntur, dolore molestias quaerat? Corporis, magni!</p>
             </div>
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-6 img">
                     <img src="img/erda.jpg" alt="A dog in a blanket" class="img-fluid">
                 </div>
 
                 <div class="col-lg-6">
-                    <form action="">
+                    <form>
                         <input type="text" class="form-control form-control-lg mb-4" id="firstName" placeholder="First Name" required> 
                     
                         <input type="text" class="form-control form-control-lg mb-4" id="lastName" placeholder="Last Name"  required> 
