--- a/shop.html
+++ b/shop.html
@@ -20,7 +20,7 @@
         
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
@@ -33,7 +33,7 @@
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link phone-number" href=""><i class="fas fa-phone"></i> (513)555-0650</a>
+                    <a id="phone-number" class="nav-link" href=""><i class="fas fa-phone"></i> (513)555-0650</a>
                 </li>
             </ul>
         </div>
@@ -167,11 +167,13 @@
                 if (document.body.scrollTop > 40 || document.documentElement.scrollTop > 40) {
                     document.getElementById("nav-bar").classList.add("color");
                     document.getElementById("pawLogo").classList.add("link-color");
+                    document.getElementById("phone-number").style.border =  "1px solid #21110e";
                     links[i].classList.add("link-color");
                     } else {
                 document.getElementById("nav-bar").style.top = "0px";
                 document.getElementById("nav-bar").classList.remove("color");
                 document.getElementById("pawLogo").classList.remove("link-color");
+                document.getElementById("phone-number").style.border =  "1px solid #ffd880";
                 links[i].classList.remove("link-color");
                 }
             }
