--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
         <div class="header-text container">
             <h1>The Pet Shop</h1>
             <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus sunt molestiae <br> 
-                voluptatum odit, incidunt eligendi quidem distinctio in, consectetur enim necessitatibus <br> excepturi cumque ipsa cupiditate voluptatibus corrupti eum quibusdam dolore?
+                The Pet Shop is a specialty pet retailer of services and solutions for the lifetime needs of pets. <br> At The Pet Shop, we love pets, and we believe pets make us better people. Every day with every connection, <br> The Pet Shop’s passionate associates help bring pet parents closer to their pets so they can live more fulfilled lives.
             </p>
 
             <a class="cta" href="shop.html">Shop Now</a>
