--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="header-text container">
             <h1>The Pet Shop</h1>
             <p>
-                The Pet Shop is a specialty pet retailer of services and solutions for the lifetime needs of pets. <br> At The Pet Shop, we love pets, and we believe pets make us better people. Every day with every connection, <br> The Pet Shop’s passionate associates help bring pet parents closer to their pets so they can live more fulfilled lives.
+                The Pet Shop is a specialty pet retailer of services and solutions for <br> the lifetime needs of pets. At The Pet Shop, we love pets, and we believe <br> pets make us better people. Every day with every connection, The Pet Shop’s <br> passionate associates help bring pet parents closer to their pets so they can <br> live more fulfilled lives.
             </p>
 
             <a class="cta" href="shop.html">Shop Now</a>
@@ -54,24 +54,59 @@
 
     <main>
         <section id="feature-section" class="container text-center">
-
+            <h2>Customer Favorites</h2>
             <!-- start of featured pet section -->
             <div class="container">
                 <div class="row">
-                    <div class="featured-pet-img col-sm-12 col-md-12 col-lg-4">
-                        <img src="img/alicia.jpg" alt="dog with yellow hat on">
+                    <div class="featured-pet-img col-sm-12 col-md-6 col-lg-2">
+                        <img src="img/Heartgard.jpg" alt="dog with yellow hat on">
+                        <h4>The Pet Store Pharmacy</h4>
                     </div>
-                    <div class="featured-pet-img col-sm-12 col-md-6 col-lg-4">
-                        <img src="img/cong.jpg" alt="dog with yellow hat on">
+                    <div class="featured-pet-img col-sm-12 col-md-6 col-lg-2">
+                        <img src="img/PremiumDogFood.jpg" alt="dog with yellow hat on">
+                        <h4>Raw Dog Food</h4>
                     </div>
-                    <div class="featured-pet-img col-sm-12 col-md-6 col-lg-4">
-                        <img src="img/bonnie-kittle.jpg" alt="dog with yellow hat on">
+                    <div class="featured-pet-img col-sm-12 col-md-6 col-lg-2">
+                        <img src="img/bags.jpg" alt="dog with yellow hat on">
+                        <h4>Supplies</h4>
                     </div>
-    
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, rem nulla reiciendis veniam ullam, laborum dolorem asperiores voluptate corporis eveniet dicta non a illum libero minima aspernatur, doloribus deleniti exercitationem.
-                        Sint, rem nulla reiciendis veniam ullam, laborum dolorem asperiores voluptate corporis eveniet dicta non a illum libero minima aspernatur, doloribus deleniti exercitationem.
-                    </p>
+                    <div class="featured-pet-img col-sm-12 col-md-6 col-lg-2">
+                        <img src="img/CatLitter.jpg" alt="dog with yellow hat on">
+                        <h4>Cat Litter</h4>
+                    </div>
+                    <div class="featured-pet-img col-sm-12 col-md-6 col-lg-2">
+                        <img src="img/DogToys.jpg" alt="dog with yellow hat on">
+                        <h4>Dog Toys</h4>
+                    </div>
+                    <div class="featured-pet-img col-sm-12 col-md-6 col-lg-2">
+                        <img src="img/Flea+Tick.jpg" alt="dog with yellow hat on">
+                        <h4>Flea & Tick Treatment</h4>
+                    </div>
+
+                    <div class="featured-pet-img col-sm-12 col-md-6 col-lg-2">
+                        <img src="img/DogTreats.jpg" alt="dog with yellow hat on">
+                        <h4>Dog Treats</h4>
+                    </div>
+                    <div class="featured-pet-img col-sm-12 col-md-6 col-lg-2">
+                        <img src="img/CatFoods.jpg" alt="dog with yellow hat on">
+                        <h4>Cat Food</h4>
+                    </div>
+                    <div class="featured-pet-img col-sm-12 col-md-6 col-lg-2">
+                        <img src="img/DogSupplements.jpg" alt="dog with yellow hat on">
+                        <h4>Dog Supplements</h4>
+                    </div>
+                    <div class="featured-pet-img col-sm-12 col-md-6 col-lg-2">
+                        <img src="img/DogBeds.jpg" alt="dog with yellow hat on">
+                        <h4>Dog Beds</h4>
+                    </div>
+                    <div class="featured-pet-img col-sm-12 col-md-6 col-lg-2">
+                        <img src="img/CatToys.jpg" alt="dog with yellow hat on">
+                        <h4>Cat Toys</h4>
+                    </div>
+                    <div class="featured-pet-img col-sm-12 col-md-6 col-lg-2">
+                        <img src="img/CatTrees.jpg" alt="dog with yellow hat on">
+                        <h4>Cat Trees, Condos, & Scratchers</h4>
+                    </div>
                 </div>
             </div>
         </section>
@@ -86,7 +121,7 @@
                             <i class="fas fa-concierge-bell"></i>
                         </div>
                         <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, ut saepe dolorem debitis esse voluptatum repellat vel nihil dolor nisi eius ab.
+                            Our experts are here 24/7 to answer questions and help you find the perfect items for your pet. We also have a 100% Unconditional Satisfaction Guaranteed Policy on every order.
                         </p>
                     </div>
                     <div class="col-md-6 col-lg-4 best-text-section">
@@ -94,7 +129,7 @@
                             <i class="fas fa-dollar-sign"></i>
                         </div>
                         <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, ut saepe dolorem debitis esse voluptatum repellat vel nihil dolor nisi eius ab.
+                            Take 40% off* your first Autoship order and 5% off select brands for all future deliveries with Autoship & Save. Orders over $49 ship free!
                         </p>
                     </div>
                     <div class="col-md-6 col-lg-4 best-text-section">
@@ -102,7 +137,7 @@
                             <i class="far fa-calendar-alt"></i>
                         </div>
                         <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, ut saepe dolorem debitis esse voluptatum repellat vel nihil dolor nisi eius ab.
+                            Skip your next order or change your order date if you have enough supplies. If you’re running low, get your next order sooner.
                         </p>
                     </div>
 
@@ -111,7 +146,7 @@
                             <i class="fas fa-shipping-fast"></i>
                         </div>
                         <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, ut saepe dolorem debitis esse voluptatum repellat vel nihil dolor nisi eius ab.
+                        Fast and free shipping on any orders over $49! This is automactically applied at checkout. Aything below $49 it will be a flat rate fee of $4.95. 
                         </p>
                     </div>
                     <div class="col-md-6 col-lg-4 best-text-section">
@@ -119,7 +154,7 @@
                             <i class="fas fa-briefcase-medical"></i>
                         </div>
                         <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, ut saepe dolorem debitis esse voluptatum repellat vel nihil dolor nisi eius ab.
+                            Connect with a Vet is a feature that enables you to connect conveniently with licensed veterinarians and get answers to your pet’s health and behavior related questions or concerns.
                         </p>
                     </div>
                     <div class="col-md-6 col-lg-4 best-text-section">
@@ -127,7 +162,7 @@
                             <i class="fas fa-bone"></i>
                         </div>
                         <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, ut saepe dolorem debitis esse voluptatum repellat vel nihil dolor nisi eius ab.
+                            We have everything you need for your pet at amazing prices, every day. Explore more than 1,000 favorite brands, including Blue Buffalo, Nutro, Natural Balance, and Tidy Cats.
                         </p>
                     </div>
                 </div>
@@ -176,9 +211,9 @@
                     <div class="col-md-4 d-flex justify-content-center">
                         <p>
                             <i class="fas fa-map-marker-alt"></i>
-                            <strong>555 Bruce way</strong><br>
-                            Cincinnati Oh, 45238 <br>
-                            (513)555-7865
+                            <strong>123 Orlando ave</strong><br>
+                            Dayton Oh, 43069 <br>
+                            (937)689-1111
                             <br><br>
                             Mon - Fri: 9am - 8pm <br>
                             Saturday: 10am - 9pm <br>
@@ -188,9 +223,9 @@
                     <div class="col-md-4 d-flex justify-content-center">
                         <p>
                             <i class="fas fa-map-marker-alt"></i>
-                            <strong>555 Bruce way</strong><br>
-                            Cincinnati Oh, 45238 <br>
-                            (513)555-7865
+                            <strong>423 Timber st</strong><br>
+                            Mason Oh, 42205 <br>
+                            (513)156-5588
                             <br><br>
                             Mon - Fri: 9am - 8pm <br>
                             Saturday: 10am - 9pm <br>
