--- a/contact.html
+++ b/contact.html
@@ -90,9 +90,9 @@
                 <div class="col-md-4 d-flex justify-content-center">
                     <p>
                         <i class="fas fa-map-marker-alt"></i>
-                        <strong>555 Bruce way</strong><br>
-                        Cincinnati Oh, 45238 <br>
-                        (513)555-7865
+                        <strong>123 Orlando ave</strong><br>
+                        Dayton Oh, 43069 <br>
+                        (937)689-1111
                         <br><br>
                         Mon - Fri: 9am - 8pm <br>
                         Saturday: 10am - 9pm <br>
@@ -102,9 +102,9 @@
                 <div class="col-md-4 d-flex justify-content-center">
                     <p>
                         <i class="fas fa-map-marker-alt"></i>
-                        <strong>555 Bruce way</strong><br>
-                        Cincinnati Oh, 45238 <br>
-                        (513)555-7865
+                        <strong>423 Timber st</strong><br>
+                        Mason Oh, 42205 <br>
+                        (513)156-5588
                         <br><br>
                         Mon - Fri: 9am - 8pm <br>
                         Saturday: 10am - 9pm <br>
